[package]
name = "pallet-dynamic-fee"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Dynamic fee handling for EVM."
license = "Apache-2.0"

[package.metadata.deppatcher.originals.dependencies]
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-std = { version = "4.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }

[package.metadata.deppatcher.originals.dev-dependencies]
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-io = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }

[dependencies]
async-trait = "0.1"
serde = { version = "1.0.137", optional = true }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false }
sp-std = { version = "4.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false , version = "4.0.0-dev" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false , version = "4.0.0-dev" }

fp-dynamic-fee = { version = "1.0.0", path = "../../primitives/dynamic-fee", default-features = false }
fp-evm = { version = "3.0.0-dev", path = "../../primitives/evm", default-features = false }

[dev-dependencies]
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false , version = "4.0.0-dev" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false , version = "6.0.0" }

[features]
default = ["std"]
std = [
	"serde",

	"codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-system/std",
	"frame-support/std",

	"fp-dynamic-fee/std",
	"fp-evm/std",
]
