[package]
name = "fp-evm-mapping"
version = "0.1.0"
license = "GPLv3"
edition = "2021"

[dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

[features]
default = ["std"]
std = ["sp-core/std", "frame-support/std"]
