[package]
name = "fp-evm-mapping"
version = "0.1.0"
license = "GPLv3"
edition = "2021"

[dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33-asset-destroy" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33-asset-destroy" }

[features]
default = ["std"]
std = ["sp-core/std", "frame-support/std"]
try-runtime = ["frame-support/try-runtime"]
