[package]
name = "pallet-evm"
version = "6.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "FRAME EVM contracts pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
evm = { default-features = false, features = ["with-codec"] , git = "https://github.com/uniquenetwork/evm", branch = "unique-polkadot-v0.9.19" }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
log = { version = "0.4", default-features = false }
primitive-types = { version = "0.11.1", default-features = false, features = ["rlp", "byteorder"] }
rlp = { version = "0.5", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sha3 = { version = "0.10.1", default-features = false }
impl-trait-for-tuples = "0.2.2"

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false , version = "6.0.0" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false , version = "6.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false , version = "6.0.0" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false , version = "4.0.0" }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false, optional = true , version = "4.0.0-dev" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false , version = "4.0.0-dev" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false , version = "4.0.0-dev" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false , version = "4.0.0-dev" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false , version = "4.0.0-dev" }

fp-evm = { version = "3.0.0-dev", path = "../../primitives/evm", default-features = false }
fp-evm-mapping = { path = "../evm-mapping/", default-features = false }

[features]
default = ["std"]
std = [
	"evm/std",
	"evm/with-serde",
	"hex/std",
	"log/std",
	"primitive-types/std",
	"rlp/std",
	"serde",
	"sha3/std",

	"codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-timestamp/std",

	"fp-evm/std",
	"fp-evm-mapping/std",
]
runtime-benchmarks = ["frame-benchmarking"]
debug-logging = []
