[package]
name = "pallet-evm"
version = "6.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "FRAME EVM contracts pallet"
repository = "https://github.com/paritytech/frontier/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
environmental = { version = "1.1.3", default-features = false, optional = true }
evm = { git = "https://github.com/uniquenetwork/evm", branch = "unique-polkadot-v0.9.33", default-features = false, features = [
	"with-codec",
] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
impl-trait-for-tuples = "0.2.2"
log = { version = "0.4.17", default-features = false }
serde = { version = "1.0.144", optional = true, features = ["derive"] }

# Parity
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
primitive-types = { version = "0.12.1", default-features = false, features = ["rlp", "byteorder"] }
rlp = { version = "0.5", default-features = false }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }

sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false } # Substate

sp-io = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-std = { version = "4.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }

frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false, optional = true } # Substrate FRAME
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }

# Frontier
fp-evm = { version = "3.0.0-dev", path = "../../primitives/evm", default-features = false }
fp-evm-mapping = { path = "../evm-mapping/", default-features = false }

[dev-dependencies]
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

[features]
default = ["std"]
std = [
	"environmental?/std",
	"evm/std",
	"evm/with-serde",
	"hex/std",
	"log/std",
	"serde",
	# Parity
	"codec/std",
	"primitive-types/std",
	"rlp/std",
	"scale-info/std",
	# Substrate
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	# Substrate FRAME
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	# Frontier
	"fp-evm/std",
	"fp-evm-mapping/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
forbid-evm-reentrancy = ["dep:environmental"]
