[package]
name = "fp-dynamic-fee"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io"]
edition = "2021"
description = "Dynamic fee inherent primitives for Ethereum RPC (web3) compatibility layer for Substrate."
license = "Apache-2.0"

[package.metadata.deppatcher.originals.dependencies]
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21" }

[dependencies]
async-trait = "0.1"

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false , version = "6.0.0" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false , version = "4.0.0-dev" }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-inherents/std",
]
