[package]
name = "fp-evm"
version = "3.0.0-dev"
license = "Apache-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "Primitive EVM abstractions for Substrate."
documentation = "https://docs.rs/sp-evm"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
evm = { default-features = false, features = ["with-codec"] , git = "https://github.com/uniquenetwork/evm", branch = "unique-polkadot-v0.9.19" }
serde = { version = "1.0.101", features = ["derive"], optional = true }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", default-features = false , version = "6.0.0" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", default-features = false , version = "4.0.0" }
impl-trait-for-tuples = "0.2.2"

[features]
default = ["std"]
std = [
	"evm/std",
	"evm/with-serde",
	"serde",

	"codec/std",
	"sp-core/std",
	"sp-std/std",
]
