[package]
name = "fp-rpc"
version = "3.0.0-dev"
authors = ["Parity Technologies <admin@parity.io"]
edition = "2021"
description = "Runtime primitives for Ethereum RPC (web3) compatibility layer for Substrate."
license = "Apache-2.0"

[dependencies]
ethereum = { version = "0.12.0", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.13.1", default-features = false }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21", default-features = false , version = "4.0.0-dev" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21", default-features = false , version = "6.0.0" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21", default-features = false , version = "6.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21", default-features = false , version = "6.0.0" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21", default-features = false , version = "4.0.0" }

fp-evm = { version = "3.0.0-dev", path = "../../primitives/evm", default-features = false }

[features]
default = ["std"]
std = [
	"ethereum/std",
	"ethereum-types/std",

	"codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",

	"fp-evm/std",
]
